# BME1325_Group_One_Repo

./: .env.example  .gitignore  MERGE_HANDOFF.md  PLAN.md  README.md  bailian_client.py  main.py  understand_proposal.md  week4_CONTRIBUTIONS.md  week5_oncourse.md  week7_progress_summary.md
PR_md/: A_stage1.md  developer_A.md  developer_B.md  developer_B_hook_inventory.md  developer_B_memory_prework.md  week8_AB_integration_and_validation.md  week8_course_presentation_report.md  week8_integration_report.md  week8_proposal.md
app/: api.py  constants.py  rule_engine.py  schemas.py  session_store.py
app_core/RAG/refs/Symptom-Guide-AI/: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  requirements.txt  setup.cfg
app_core/RAG/refs/Symptom-Guide-AI/src/Vector_db/: create_vector_db.py
app_core/RAG/refs/Symptom-Guide-AI/src/app/: app.py  chat_manager.py  llm_utils.py  symptom_accumulator.py
app_core/RAG/refs/Symptom-Guide-AI/src/processing/: clean_nhs_medicines_final.py  create_master_dataset.py  final_clean_nhs.py
app_core/RAG/refs/Symptom-Guide-AI/src/scrapers/: scrape_nhs.py  scrape_nhs_symptoms_clean.py  scrape_symptoms.py
app_core/RAG/refs/Symptom-Guide-AI/tests/: test_basic.py
docs/: aliyun-bailian-api-integration.md  feature-extraction-workflow.md  project-structure.md  triage-agent-next-steps-cn.md  triage-agent-workflow.md  version-iteration-log.md
edmas/: EDMAS_week5_12_workflow.md  __init__.py
scripts/: check_runtime_consistency.py  export_memory_replay.py  run_week7_long_regression.py
tests/: conftest.py  test_feature_extractor.py  test_rule_engine.py  (+4 more)
(+1568 files in other folders)
