[metadata]
name = symptoguide
version = 0.1.0
description = SymptoGuide AI - medical symptom assistance (educational)
author = SymptoGuide Contributors
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
install_requires =
    streamlit
    langchain
    langchain-core
    langchain-ollama
    langchain-huggingface
    langchain-chroma
    chromadb
    sentence-transformers
    python-dotenv
    requests
    beautifulsoup4

[options.packages.find]
where = src

